extends Node




func _on_s_3__lvl_1_pressed():
	get_tree().change_scene_to_file("res://levels/Stage-3 Level1.tscn")


func _on_s_3_lvl_2_pressed():
	get_tree().change_scene_to_file("res://levels/Stage-3 Level2.tscn")


func _on_s_3_lvl_3_pressed():
	get_tree().change_scene_to_file("res://levels/Stage-3 Level3.tscn")


func _on_s_3_lvl_4_pressed():
	get_tree().change_scene_to_file("res://levels/Stage-3 Level4.tscn")


func _on_s_3_lvl_5_pressed():
	get_tree().change_scene_to_file("res://levels/Stage-3 Level5.tscn")


func _on_back_pressed():
	get_tree().change_scene_to_file("res://scenes/stage2.tscn")
